--- a/src/i18n/locales/zh-CN.json
+++ b/src/i18n/locales/zh-CN.json
@@ -225,7 +225,9 @@
         "独特的专利设计可使GLSofort®系统具备自动搜寻最新研究成果及智能整合功能",
         "将基因检测分析时间从几周大幅缩减到几个小时",
         "更容易制作临床报告和解析，成本降低10-20倍",
-        "可通过积累的临床和基因组数据库获得新发现"
+        "可通过积累的临床和基因组数据库获得新发现",
+        "内置算法：AI大模型多维度变异打分排序算法",
+        "AI工具：GLS-AI千万位点文献数据库"
       ]
     },
     "applications": {
@@ -818,6 +820,12 @@
       "title": "营业时间",
       "weekdays": "周一至周五：9:00 - 18:00",
       "weekends": "周六至周日：预约服务"
+    },
+    "marketManager": {
+      "title": "市场经理联系",
+      "phone": "+86 15715197117",
+      "email": "geneticist@genomelight.com",
+      "description": "扫描二维码或直接联系我们的市场经理获取产品咨询和业务合作机会"
     }
   },
   "news": {
