fix: modify button to link

--- a/src/i18n/locales/zh-CN.json
+++ b/src/i18n/locales/zh-CN.json
@@ -262,7 +262,7 @@
     "cta": {
       "title": "专注解读基因测序(NGS)结果，通过人工智能(AI)和深度机器学习(Deep ML)的支持，实现高效而精准的基因测序解读！",
       "subtitle": "如果您有试用和合作意向，请不要犹豫同我们联系。",
-      "button": "在线留言"
+      "button": "联系我们"
     }
   },
   "reagent": {
@@ -382,7 +382,7 @@
     "cta": {
       "title": "高质量测序试剂，助力精准基因检测",
       "subtitle": "如需了解更多产品信息或采购咨询，请联系我们的专业团队",
-      "button": "获取报价"
+      "button": "联系我们"
     }
   },
   "health": {
@@ -535,7 +535,7 @@
     "cta": {
       "title": "开启您的个性化健康管理之旅",
       "subtitle": "一次检测，终身受益。让基因科学为您的健康保驾护航",
-      "button": "立即咨询"
+      "button": "联系我们"
     }
   },
   "compression": {
@@ -742,7 +742,7 @@
     "cta": {
       "title": "ZipHelix - 您的基因数据存储专家",
       "subtitle": "降低存储成本，提升数据管理效率，为您的基因数据提供最优解决方案",
-      "button": "获取方案"
+      "button": "联系我们"
     }
   },
   "contact": {
@@ -1048,7 +1048,7 @@
     "contact": {
       "title": "联系我们",
       "description": "如果您有试用和合作意向，请不要犹豫同我们联系。",
-      "button": "在线留言"
+      "button": "联系我们"
     }
   }
 }
