fix: modify footer

--- a/src/i18n/locales/en-US.json
+++ b/src/i18n/locales/en-US.json
@@ -112,10 +112,10 @@
     "services": {
       "title": "Main Services",
       "items": [
-        "Gene Sequencing Analysis (GLSofort®)",
-        "Rare Disease Genetic Diagnosis",
-        "Carrier Screening",
-        "Gene Panel Testing"
+        "GLSofort® Analysis Platform",
+        "Sequencer Reagent Kits",
+        "Health Screening",
+        "Data Compression System"
       ],
       "links": [
         "/glsofort",
