--- a/src/i18n/locales/zh-CN.json
+++ b/src/i18n/locales/zh-CN.json
@@ -113,10 +113,10 @@
     "services": {
       "title": "主要服务",
       "items": [
-        "基因测序解析服务(GLSofort®)",
-        "罕见病基因诊断",
-        "携带者筛查",
-        "基因面板检测"
+        "GLSofort®解读平台",
+        "测序仪试剂盒",
+        "大健康筛查",
+        "数据压缩一体机"
       ],
       "links": [
         "/glsofort",
