--- a/src/i18n/locales/zh-CN.json
+++ b/src/i18n/locales/zh-CN.json
@@ -8,7 +8,7 @@
       "services": "产品服务",
       "serviceItems": {
         "glsofort": "GLSofort®解读平台",
-        "reagent": "测序仪试剂盒",
+        "reagent": "高通量测序试剂盒",
         "health": "大健康筛查",
         "compression": "数据压缩一体机"
       },
@@ -44,7 +44,7 @@
         "link": "/glsofort"
       },
       "reagent": {
-        "title": "测序仪试剂盒",
+        "title": "高通量测序试剂盒",
         "description": "自研高通量测序芯片与测序试剂，适用于NextSeq500/550测序仪，性能媲美原装耗材",
         "features": [
           "高质量测序试剂",
@@ -114,7 +114,7 @@
       "title": "主要服务",
       "items": [
         "GLSofort®解读平台",
-        "测序仪试剂盒",
+        "高通量测序试剂盒",
         "大健康筛查",
         "数据压缩一体机"
       ],
@@ -267,7 +267,7 @@
   },
   "reagent": {
     "hero": {
-      "title": "测序仪试剂盒",
+      "title": "高通量测序试剂盒",
       "subtitle": "自研高通量测序芯片与测序试剂，提供成套的适用于NextSeq500/550测序仪的试剂盒，性能媲美Illumina原装耗材",
       "buttons": {
         "specifications": "查看规格参数",
@@ -396,11 +396,24 @@
     },
     "overview": {
       "title": "健康筛查服务概述",
-      "description": "我们提供从儿童到成人的全方位基因健康筛查服务，通过先进的基因检测技术，帮助您了解疾病风险、优化用药方案、指导生活方式，实现个性化健康管理。"
+      "description": "我们提供从儿童到成人的全方位基因健康筛查服务，通过先进的基因检测技术，帮助您了解疾病风险、优化用药方案、指导生活方式，实现个性化健康管理。",
+      "healthManagement": {
+        "title": "全生命周期健康管理",
+        "description": "从儿童到成人，提供个性化的健康风险评估和管理方案。"
+      },
+      "geneticTesting": {
+        "title": "精准基因检测",
+        "description": "基于先进的基因测序技术，提供精确的疾病风险预测。"
+      },
+      "medicationInstruction": {
+        "title": "安全用药指导",
+        "description": "个体化用药建议，避免药物不良反应。"
+      }
     },
     "packages": {
       "title": "健康筛查套餐",
       "wes": {
+        "title": "全外显子组健康评估套餐",
         "adult": {
           "title": "成人全外显子组健康评估套餐",
           "description": "帮助我们了解自身对于疾病的风险指数以及遗传疾病的携带状态，通过遗传信息的检测明确自身药物受体、转运、代谢相关的蛋白在氨基酸序列、结构和生物学功能上差异，可以帮助您实现个性化、精细化治疗，降低毒副/不良反应的发生，全面提升用药效果。通过对特质相关基因信息的检测解读，可以让我们在各种生理过程及社会活动中，趋利避害，扬长避短，帮助我们提升生存质量和人生高度。"
@@ -411,6 +424,7 @@
         }
       },
       "wgs": {
+        "title": "全基因组健康评估套餐",
         "adult": {
           "title": "成人全基因组健康评估套餐",
           "description": "检测信息最全面，数据量最大的基因检测，一次测序终身受益，拥有'个人全基因组数据'将能链接全球最新的与基因有关的解读，预知疾病风险，了解属于自己的DNA密码，了解自身对于疾病的风险指数以及遗传疾病的携带筛查，精准用药更准确了解自身对于药物的代谢避免因用药不当带来的伤害"
@@ -421,6 +435,7 @@
         }
       },
       "chip": {
+        "title": "基因芯片筛查套餐",
         "adult": {
           "title": "成人基因芯片筛查套餐",
           "description": "基于成熟的基因检测技术，对超过70万个基因序列位点进行检测，解读内容包括疾病风险、精准用药、饮食、运动、营养、特质等有关内容，为客户的精准健康管理提供有效的依据。"
@@ -431,6 +446,7 @@
         }
       },
       "specialized": {
+        "title": "专项检测套餐",
         "cancer": {
           "title": "男女肿瘤七项",
           "description": "针对常见肿瘤的遗传风险评估，为早期预防和筛查提供科学依据。"
@@ -549,7 +565,19 @@
     },
     "overview": {
       "title": "ZipHelix产品概述",
-      "description": "ZipHelix是专为基因测序数据设计的高效压缩存储解决方案，采用独创的压缩算法，为医疗机构提供安全、高效、经济的数据管理服务。"
+      "description": "ZipHelix是专为基因测序数据设计的高效压缩存储解决方案，采用独创的压缩算法，为医疗机构提供安全、高效、经济的数据管理服务。",
+      "compressionTechnique": {
+        "title": "ZipHelix压缩技术",
+        "description": "独创算法实现2.25倍于gzip的压缩率，显著节省存储空间"
+      },
+      "dataManagement": {
+        "title": "智能数据管理",
+        "description": "自动化归档和备份，确保数据安全和高效管理"
+      },
+      "cloudDeployment": {
+        "title": "多云部署",
+        "description": "支持本地、私有云和混合云等多种部署方式"
+      }
     },
     "features": {
       "title": "核心技术特色",
@@ -797,7 +825,7 @@
           "placeholder": "请选择您感兴趣的服务",
           "options": [
             "GLSofort®解读平台",
-            "测序仪试剂盒",
+            "高通量测序试剂盒",
             "大健康筛查",
             "数据压缩一体机",
             "其他服务咨询"
@@ -814,7 +842,8 @@
     },
     "map": {
       "title": "办公地址",
-      "description": "欢迎您来访我们的办公室，我们期待与您面对面交流。"
+      "description": "欢迎您来访我们的办公室，我们期待与您面对面交流。",
+      "mapLocation": "重庆医科大学缙云校区位置图"
     },
     "businessHours": {
       "title": "营业时间",
@@ -829,6 +858,9 @@
     }
   },
   "news": {
+    "search": {
+      "placeholder": "搜索新闻..."
+    },
     "hero": {
       "title": "动态资讯",
       "subtitle": "了解GenomeLight最新动态、行业资讯和技术进展，掌握基因检测领域的前沿信息。"
@@ -910,7 +942,13 @@
     "backToList": "返回列表",
     "relatedNews": "相关新闻",
     "share": "分享",
-    "noResults": "暂无相关资讯"
+    "noResults": "暂无相关资讯",
+    "newsletter": {
+      "title": "订阅我们的资讯",
+      "description": "获取GenomeLight最新动态和行业资讯",
+      "placeholder": "请输入您的邮箱地址",
+      "subscribe": "订阅"
+    }
   },
   "about": {
     "companyIntro": {
@@ -939,7 +977,7 @@
       },
       "values": {
         "title": "核心价值观",
-        "content": "创新： 我们不断寻求更好的解决方案，满足医患需求。同理心： 深刻理解患者和医疗专业人员，关心并尊重他们的感受。诚信： 遵守最高的道德和透明标准，确保数据安全和保密。合作： 积极与医疗界、研究机构和患者社群合作，共同改善遗传病管理。"
+        "content": "我们不断寻求更好的解决方案，满足医患需求。深刻理解患者和医疗专业人员，关心并尊重他们的感受。遵守最高的道德和透明标准，确保数据安全和保密。积极与医疗界、研究机构和患者社群合作，共同改善遗传病管理。"
       }
     },
     "team": {
@@ -947,7 +985,7 @@
       "description": "强大的技术力量是支撑企业优质产品服务的基石，我公司核心技术研发团队由国内外资深科学家和工程师组成。涵盖遗传学家、生物信息学专业、人工智能方面的高级人才。管理团队由拥有着丰富的管理经验的人才队伍组成，为企业的发展运营提供动力。",
       "members": {
         "liWenhui": {
-          "name": "李文慧",
+          "name": "Laura Li",
           "title": "FACMGG博士，CTO",
           "description": "师从诺贝尔生理学和医学奖得主、前约翰霍普金斯大学校长Daniel Nathans，原illumina首席科学家,Breakthrough Genomics创始人、临床遗传分子生物学家科学家(CGMBS)、美国约翰霍普金斯大学分子生物学和遗传学博士、加州理工大学博士后、南加州大学助理教授、美国遗传医学会认证的遗传学家。",
           "experience": {
@@ -972,7 +1010,7 @@
         "liuYunwei": {
           "name": "刘云威",
           "title": "CEO 基诺莱联合创始人 & 董事长",
-          "description": "重庆德强化工创始人 & 董事长，瑞士 IMD 商学院 拜耳高管 EMBA 班，北京师范大学化学系本硕，师从国际著名辐射化学家陈文琇先生。原拜耳高管，具备极强的产业化能力和丰富的市场资源。",
+          "description": "基诺莱创始人 & 董事长，师从国际著名辐射化学家陈文琇先生。原拜耳高管，具备极强的产业化能力和丰富的市场资源。",
           "background": {
             "title": "教育背景",
             "items": [
@@ -994,7 +1032,7 @@
         "wangJia": {
           "name": "王伽",
           "title": "CIO 基诺莱联合创始人 & CIO",
-          "description": "深圳前海伽德资本 & 董事长，中山大学临床医学，清华大学深圳研究院 MBA。与illumina、英特尔创新加速部合作，支持基因检测领域等技术型初创企业研发与成长。",
+          "description": "深圳前海伽德资本 & 董事长。与illumina、英特尔创新加速部合作，支持基因检测领域等技术型初创企业研发与成长。",
           "background": {
             "title": "教育背景",
             "items": [
@@ -1041,7 +1079,6 @@
       "title": "隐私",
       "content": "保护用户隐私和敏感健康信息是我们的首要任务。我们的软件符合HIPAA、CLIA、dbGaP、美国-欧洲数据隐私安全港法规、中国网络安全法等。基因组信息存储在云中，软件用户可以通过网络浏览器严格安全地访问这些信息。患者的标识符(如果提供的话)与基因组信息分开安全存储，以保护隐私和机密性。授权软件用户对其数据拥有完全控制权，包括数据保留和销毁。软件用户数据在通过互联网和云传输时都经过加密，以最大限度地降低未经授权访问系统的风险。"
     },
-
     "cta": {
       "title": "引领技术突破，推动行业发展; 提升服务品质，保障生命健康!"
     },
